k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bmt-prod
  labels:
    name: bmt-prod
