k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmt-api-service
  namespace: bmt-prod
spec:
  selector:
    app: bmt-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
